# synths

./: .gitignore  ChangeLog.md  Effect.hs  Filter.hs  Oscillator.hs  Output.hs  README.md  Synths.cabal  TODO.md  Time.hs  Types.hs  package.yaml  stack.yaml  synths.cabal  synths.geany  synths.geany.dist  test.hs
app/: Main.hs
examples/: deutschland.hs  muse-bliss-2.hs  muse-bliss.hs  rythm.hs  walking.hs
src/: Chord.hs  Effect.hs  Filter.hs  Oscillator.hs  Output.hs  Time.hs  Types.hs  test.hs
