name:           Synths
version:        0.0.0
cabal-version:  >= 1.8
license:        BSD3
author:         Fábián Tamás László <giganetom@gmail.com>
synopsis:       A sound and music synthesizer framework
build-type:     Simple

Executable walking
  build-depends: base
               , containers
               , bytestring
               , streamly
               , vector
               , transformers
               , deepseq
               , WAVE

  hs-source-dirs: src, examples
  main-is: walking.hs
  --ghc-options: -O2 -prof -rtsopts -fprof-auto
  ghc-options: -O3
  other-modules: Chord
               , Effect
               , Filter
               , Oscillator
               , Output
               , Time
               , Types

Executable muse-bliss
  build-depends: base
               , containers
               , bytestring
               , streamly
               , vector
               , transformers
               , WAVE

  hs-source-dirs: src, examples
  main-is: muse-bliss.hs
  -- ghc-options: -O2 -prof -rtsopts -fprof-auto -auto-all -caf-all
  ghc-options: -O3
  other-modules: Chord
               , Effect
               , Filter
               , Oscillator
               , Output
               , Time
               , Types

Executable muse-bliss-2
  build-depends: base
               , containers
               , bytestring
               , streamly
               , vector
               , transformers
               , WAVE

  hs-source-dirs: src, examples
  main-is: muse-bliss-2.hs
  -- ghc-options: -O2 -prof -rtsopts -fprof-auto -auto-all -caf-all
  ghc-options: -O3
  other-modules: Chord
               , Effect
               , Filter
               , Oscillator
               , Output
               , Time
               , Types

Executable rythm
  build-depends: base
               , containers
               , bytestring
               , streamly
               , vector
               , transformers
               , WAVE

  hs-source-dirs: src, examples
  main-is: rythm.hs
  -- ghc-options: -O2 -prof -rtsopts -fprof-auto -auto-all -caf-all
  ghc-options: -O3
  other-modules: Chord
               , Effect
               , Filter
               , Oscillator
               , Output
               , Time
               , Types

Executable deutschland
  build-depends: base
               , containers
               , bytestring
               , streamly
               , vector
               , transformers
               , WAVE

  hs-source-dirs: src, examples
  main-is: deutschland.hs
  -- ghc-options: -O2 -prof -rtsopts -fprof-auto -auto-all -caf-all
  ghc-options: -O3
  other-modules: Chord
               , Effect
               , Filter
               , Oscillator
               , Output
               , Time
               , Types
