name:           Synths
version:        0.0.0
cabal-version:  >= 1.8
license:        BSD3
author:         Fábián Tamás László <giganetom@gmail.com>
synopsis:       A sound and music synthesizer framework
build-type:     Simple

Executable test
  build-depends: base
               , containers
               , WAVE
               , stream-fusion
               , bytestring

  hs-source-dirs: src
  main-is: test.hs
  --ghc-options: -O2 -prof -rtsopts -fprof-auto -auto-all -caf-all
  ghc-options: -O3

